task(html): learning HTML - WIP

--- a/index.html
+++ b/index.html
@@ -1,106 +1,41 @@
-<!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+<!DOCTYPE html>
+<html>
+	<head>
+	<!--head is where you put in properties about the page: you load your csss stylings and you could maybe load javascript, but this is old school JK you load it at bottom of body whatever and you say if you want it to be different for mobile-->
+		<meta charset="utf-8"> 
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> <!-- this is important to put but we dont remember why -->
 
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <style>
-            body {
-                padding-top: 50px;
-                padding-bottom: 20px;
-            }
-        </style>
-        <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-        <link rel="stylesheet" href="css/main.css">
+		<title>
+		Carly's Amazing Website
+		</title>
+	</head>
+	<body>
+		<!-- you have to have one and only one h1 heading on your site becayse that is what google looks for -->
+		<h1> Carly's Amazing Website </h1>
+		<h2> Look how pretty it is! </h2>
 
-        <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
-    </head>
-    <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Project name</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <form class="navbar-form navbar-right" role="form">
-            <div class="form-group">
-              <input type="text" placeholder="Email" class="form-control">
-            </div>
-            <div class="form-group">
-              <input type="password" placeholder="Password" class="form-control">
-            </div>
-            <button type="submit" class="btn btn-success">Sign in</button>
-          </form>
-        </div><!--/.navbar-collapse -->
-      </div>
-    </nav>
+		<p><a href="http://www.lipsum.com" target="_blank">Lorem ipsum</a> dolor sit amet, consectetur adipiscing elit. Sed ut tempus nibh. Sed ultrices dui imperdiet, dapibus ipsum vitae, ornare magna. Nullam fringilla varius ex sed varius. Morbi placerat pulvinar ex vel laoreet. Mauris non felis at felis rhoncus ultricies. Nunc diam nisl, ultrices eget dolor eu, vulputate feugiat enim. Donec fringilla eleifend imperdiet. Nunc varius libero ut tortor semper imperdiet.</p>
 
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
-      <div class="container">
-        <h1>Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
-      </div>
-    </div>
+		<p>Pellentesque feugiat ex scelerisque iaculis vestibulum. Vestibulum lacus urna, malesuada a magna in, pharetra rhoncus odio. Sed eros elit, tincidunt a elit eu, maximus luctus nunc. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse mattis nunc vitae ipsum tempus, eu aliquam sapien eleifend. Nunc commodo dolor metus, nec laoreet leo efficitur nec. Pellentesque maximus dolor ligula, ut blandit nunc scelerisque ut.</p>
 
-    <div class="container">
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-       </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
-      </div>
+		<img src="img/kitty-pic.gif" alt="picture of a kitty" /> 
 
-      <hr>
+		<p>Aliquam aliquet, nulla in sagittis viverra, nunc tortor elementum orci, vel fringilla odio ante at lorem. Phasellus non ipsum a urna semper aliquam. Nullam quis ex erat. Phasellus vehicula turpis sed sapien laoreet, nec congue nunc laoreet. Sed augue enim, commodo ut ullamcorper vitae, dignissim sed dui. Nam ultricies pulvinar lectus, sit amet semper nibh ultricies vitae. Praesent quis eros nec ipsum dictum fringilla eget quis ligula. Nulla facilisi. Nunc fermentum orci ut scelerisque accumsan. Ut id augue at nulla efficitur aliquet. Donec sed nunc pretium, pulvinar turpis in, mollis felis. Quisque et condimentum sapien. Etiam justo metus, eleifend at luctus ut, tincidunt vel massa.</p>
 
-      <footer>
-        <p>&copy; Company 2015</p>
-      </footer>
-    </div> <!-- /container -->        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+		<h2> More pretty stuff... </h2>
 
-        <script src="js/vendor/bootstrap.min.js"></script>
+		<p>Donec ut diam urna. Nulla tempus tortor ipsum, vel mollis tellus finibus nec. Nulla feugiat mauris sed euismod porta. Morbi fringilla leo ut nisi luctus, a scelerisque magna hendrerit. Aliquam fringilla egestas purus, fermentum porttitor justo dignissim in. Quisque ut magna aliquam, rhoncus arcu eget, pretium arcu. Vivamus nec ante sit amet nulla sodales sodales posuere aliquam lectus. Sed rutrum magna vestibulum, gravida leo et, facilisis ex.<br /><br />Mauris pharetra feugiat convallis. Aliquam erat volutpat. Aliquam erat volutpat. Nulla sodales nibh lectus, et faucibus ligula interdum vitae. Integer tempor mi ut justo cursus, ac aliquet mauris ultricies. Vestibulum tincidunt, ligula vitae tristique malesuada, elit tellus accumsan libero, quis mattis leo magna sed diam. Mauris nisl nisl, tristique convallis ultrices id, scelerisque quis diam. Nulla elementum consequat sapien, at interdum ante euismod pulvinar.</p>
 
-        <script src="js/main.js"></script>
+		<p>Maecenas aliquam molestie lacus eu efficitur. Nunc ut consequat orci. Etiam arcu justo, sollicitudin sed molestie ut, tempus at ligula. Cras tortor lorem, pellentesque et leo eget, congue volutpat neque. Aenean cursus orci et libero laoreet, quis feugiat risus feugiat. Nullam eu ligula dapibus, mollis purus ac, vulputate orci. Nullam fringilla lacinia sapien quis convallis. Pellentesque consectetur tempor erat bibendum ornare. Maecenas rhoncus, nunc in accumsan lobortis, odio justo porta nulla, malesuada feugiat orci risus a libero. Integer et dui id elit ornare maximus. Donec porta sapien risus, sit amet congue erat consectetur in. Praesent consequat urna eu porttitor euismod.</p>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        </script>
-    </body>
+
+		
+		<!--in sublime if you command click it creates two cursers..cool! .....these all take priority with google differently, subheadings are h2, sub sub headings h3 etc.
+		 the way you close images is you just put /> you DONT put /img> 
+		 separate attributes with spaces?? (attributes do stuff to tag) e.g. in the case of the link its the target and the href, in imaage its which image to load
+		 NO SPACE between attribute and its value-->
+
+
+
+	</body>
 </html>
